// Vitest Snapshot v1

exports[`getSections > should return an array 1`] = `
[
  {
    "components": [],
    "content": {
      "require": "!!~/packages/vue-styleguidist/src/loaders/examples-loader.js?customLangs=vue|js|jsx!~/test/components/ReadMe.md",
    },
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "href": undefined,
    "name": "Readme",
    "sectionDepth": 0,
    "sections": [],
    "slug": "readme-1",
    "usageMode": "collapse",
  },
  {
    "components": [
      {
        "filepath": "components/Button.vue",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "require": "~/test/components/Button.vue",
        },
        "pathLine": "components/Button.vue",
        "props": {
          "require": "!!~/packages/vue-styleguidist/src/loaders/vuedoc-loader.js!~/test/components/Button.vue",
        },
        "slug": "button-2",
        "subComponents": undefined,
      },
    ],
    "content": undefined,
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "href": undefined,
    "name": "Components",
    "sectionDepth": 0,
    "sections": [],
    "slug": "components-1",
    "usageMode": "collapse",
  },
  {
    "components": [
      {
        "filepath": "components/Button.vue",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "require": "~/test/components/Button.vue",
        },
        "pathLine": "components/Button.vue",
        "props": {
          "require": "!!~/packages/vue-styleguidist/src/loaders/vuedoc-loader.js!~/test/components/Button.vue",
        },
        "slug": "button-3",
        "subComponents": undefined,
      },
    ],
    "content": undefined,
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "href": undefined,
    "name": "Ignore",
    "sectionDepth": 0,
    "sections": [],
    "slug": "ignore-1",
    "usageMode": "collapse",
  },
]
`;

exports[`processSection > should return an object for section with components 1`] = `
{
  "components": [
    {
      "filepath": "components/Button.vue",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "require": "~/test/components/Button.vue",
      },
      "pathLine": "components/Button.vue",
      "props": {
        "require": "!!~/packages/vue-styleguidist/src/loaders/vuedoc-loader.js!~/test/components/Button.vue",
      },
      "slug": "button",
      "subComponents": undefined,
    },
  ],
  "content": undefined,
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "href": undefined,
  "name": "Components",
  "sectionDepth": 0,
  "sections": [],
  "slug": "components",
  "usageMode": "collapse",
}
`;

exports[`processSection > should return an object for section with content 1`] = `
{
  "components": [],
  "content": {
    "require": "!!~/packages/vue-styleguidist/src/loaders/examples-loader.js?customLangs=vue|js|jsx!~/test/components/ReadMe.md",
  },
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "href": undefined,
  "name": "Readme",
  "sectionDepth": 0,
  "sections": [],
  "slug": "readme",
  "usageMode": "collapse",
}
`;

exports[`processSection > should return an object for section without ignored components 1`] = `
{
  "components": [
    {
      "filepath": "components/Button.vue",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "require": "~/test/components/Button.vue",
      },
      "pathLine": "components/Button.vue",
      "props": {
        "require": "!!~/packages/vue-styleguidist/src/loaders/vuedoc-loader.js!~/test/components/Button.vue",
      },
      "slug": "button-1",
      "subComponents": undefined,
    },
  ],
  "content": undefined,
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "href": undefined,
  "name": "Ignore",
  "sectionDepth": 0,
  "sections": [],
  "slug": "ignore",
  "usageMode": "collapse",
}
`;
